[package]
name = "cloud-node-discovery"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ville Vesilehto <ville@vesilehto.fi>"]
description = "Cloud node discovery library"

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Provider-specific dependencies
aws-config = { version = "1.0", features = ["behavior-version-latest"], optional = true }
aws-sdk-ec2 = { version = "1.0", optional = true }

[features]
default = ["aws"]
aws = ["aws-config", "aws-sdk-ec2"]
all = ["aws"]